--- a/Assn2_Riddhick_Dalal_24-27-14.ipynb
+++ b/Assn2_Riddhick_Dalal_24-27-14.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
        "       [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "        [28, 29]]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "       [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,15 +286,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.86521067 1.43076032 0.86157129 0.97106604 1.0412553 ]\n",
-      " [0.99539779 0.83157454 1.19903573 0.51345479 1.1273181 ]]\n"
+      "[[0.62828771 2.87741072 0.47109762 0.27071401 2.96953038]\n",
+      " [1.93119524 0.92399104 1.14296293 1.47382809 1.66748912]]\n"
      ]
     }
    ],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,15 +314,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.43030423 1.13116743 1.03030351 0.74226041 1.0842867 ]\n",
-      "[0.43490644 0.29959289 0.16873222 0.22880563 0.0430314 ]\n"
+      "[1.27974147 1.90070088 0.80703028 0.87227105 2.31850975]\n",
+      "[0.65145377 0.97670984 0.33593266 0.60155704 0.65102063]\n"
      ]
     }
    ],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,15 +342,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 2.22044605e-16 -2.22044605e-16  0.00000000e+00  2.22044605e-16\n",
-      "  0.00000000e+00]\n",
+      "[ 0.00000000e+00  1.11022302e-16  0.00000000e+00  1.11022302e-16\n",
+      " -2.22044605e-16]\n",
       "[1. 1. 1. 1. 1.]\n"
      ]
     }
@@ -360,6 +360,52 @@
     "new_sd=np.std(std_data,axis=0)\n",
     "print(new_means)\n",
     "print(new_sd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[          1           1           1           1           1           1\n",
+      "            1           1           1           1           1           1]\n",
+      " [          1           2           4           8          16          32\n",
+      "           64         128         256         512        1024        2048]\n",
+      " [          1           3           9          27          81         243\n",
+      "          729        2187        6561       19683       59049      177147]\n",
+      " [          1           4          16          64         256        1024\n",
+      "         4096       16384       65536      262144     1048576     4194304]\n",
+      " [          1           5          25         125         625        3125\n",
+      "        15625       78125      390625     1953125     9765625    48828125]\n",
+      " [          1           6          36         216        1296        7776\n",
+      "        46656      279936     1679616    10077696    60466176   362797056]\n",
+      " [          1           7          49         343        2401       16807\n",
+      "       117649      823543     5764801    40353607   282475249  1977326743]\n",
+      " [          1           8          64         512        4096       32768\n",
+      "       262144     2097152    16777216   134217728  1073741824           0]\n",
+      " [          1           9          81         729        6561       59049\n",
+      "       531441     4782969    43046721   387420489  -808182895  1316288537]\n",
+      " [          1          10         100        1000       10000      100000\n",
+      "      1000000    10000000   100000000  1000000000  1410065408  1215752192]\n",
+      " [          1          11         121        1331       14641      161051\n",
+      "      1771561    19487171   214358881 -1937019605   167620825  1843829075]\n",
+      " [          1          12         144        1728       20736      248832\n",
+      "      2985984    35831808   429981696   864813056  1787822080   -20971520]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def vandermonde(N):\n",
+    "    vec=np.arange(N)+1\n",
+    "    vander=vec.reshape(N,1)\n",
+    "    vander=vander**np.arange(N)\n",
+    "    return vander\n",
+    "vander=vandermonde(12)\n",
+    "print(vander)"
    ]
   },
   {
