--- a/Assn2_Riddhick_Dalal_24-27-14.ipynb
+++ b/Assn2_Riddhick_Dalal_24-27-14.ipynb
@@ -1,8 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Name : Riddhick Dalal\n",
+    "## Reg No : 24-27-14\n",
+    "## Course : MTech Data Science"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,8 +19,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 1:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +59,7 @@
        "       [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -55,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +96,7 @@
        "        [28, 29]]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +119,7 @@
        "       [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]])"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -191,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -230,8 +246,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Question 2 :\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,15 +309,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.62828771 2.87741072 0.47109762 0.27071401 2.96953038]\n",
-      " [1.93119524 0.92399104 1.14296293 1.47382809 1.66748912]]\n"
+      "[[1.60000635 1.50898441 0.60931832 6.51883295 0.8343094 ]\n",
+      " [4.14147312 1.1092325  0.45893072 1.00041474 0.92172425]]\n"
      ]
     }
    ],
@@ -304,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,15 +337,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1.27974147 1.90070088 0.80703028 0.87227105 2.31850975]\n",
-      "[0.65145377 0.97670984 0.33593266 0.60155704 0.65102063]\n"
+      "[2.87073974 1.30910845 0.53412452 3.75962384 0.87801683]\n",
+      "[1.27073338 0.19987595 0.0751938  2.75920911 0.04370743]\n"
      ]
     }
    ],
@@ -333,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,15 +365,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.00000000e+00  1.11022302e-16  0.00000000e+00  1.11022302e-16\n",
-      " -2.22044605e-16]\n",
+      "[ 0.00000000e+00 -6.10622664e-16 -3.88578059e-16  1.11022302e-16\n",
+      "  0.00000000e+00]\n",
       "[1. 1. 1. 1. 1.]\n"
      ]
     }
@@ -363,8 +386,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 3 :"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -410,10 +440,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x=np.ones(12)\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.20000000e+01, 4.09500000e+03, 2.65720000e+05, 5.59240500e+06,\n",
+       "       6.10351560e+07, 4.35356467e+08, 2.30688120e+09, 1.22713351e+09,\n",
+       "       9.43953692e+08, 3.73692871e+09, 3.10225064e+08, 3.10073456e+09])"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b=np.dot(vander,x)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.99559784 1.00491714 0.99946976 1.00000954 1.         0.99999917\n",
+      " 1.00000018 0.99999999 1.         1.         1.         1.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "inv_v=np.linalg.inv(vander)\n",
+    "res=np.dot(inv_v,b)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The expected result was a vector having 12 ones, but in actual result some of the values are not exactly 1."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.0000114  0.99997033 1.00002961 0.99998507 1.00000423 0.9999993\n",
+      " 1.00000007 1.         1.         1.         1.         1.        ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "res2=np.linalg.solve(vander,b)\n",
+    "print(res2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The result is more closer to the actual result."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Github Link : <a href=\"https://github.com/Riddhick/Riddhick_Dalal_24-27-14\">Github</a>\n",
+    "\n",
+    "#### [https://github.com/Riddhick/Riddhick_Dalal_24-27-14]"
+   ]
   }
  ],
  "metadata": {
