--- a/Assn2_Riddhick_Dalal_24-27-14.ipynb
+++ b/Assn2_Riddhick_Dalal_24-27-14.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Name : Riddhick Dalal\n",
-    "## Reg No : 24-27-14\n",
-    "## Course : MTech Data Science"
+    "### Name : Riddhick Dalal\n",
+    "### Reg No : 24-27-14\n",
+    "### Course : MTech Data Science\n",
+    "### Assignment 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,19 +37,19 @@
      "text": [
       "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
       " 24 25 26 27 28 29 30]\n",
-      "(31,)\n"
+      "Shape :(31,)\n"
      ]
     }
    ],
    "source": [
     "var1=np.arange(0,30+1,1)\n",
     "print(var1)\n",
-    "print(var1.shape)"
+    "print(\"Shape :\"+str(var1.shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +60,7 @@
        "       [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]])"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +97,7 @@
        "        [28, 29]]])"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +120,7 @@
        "       [20, 21, 22, 23, 24, 25, 26, 27, 28, 29]])"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,15 +310,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1.60000635 1.50898441 0.60931832 6.51883295 0.8343094 ]\n",
-      " [4.14147312 1.1092325  0.45893072 1.00041474 0.92172425]]\n"
+      "[[1.46302419 2.5870391  8.8505052  4.70811873 0.72261522]\n",
+      " [0.94640007 1.26836814 1.11497842 7.37409162 0.24736618]]\n"
      ]
     }
    ],
@@ -327,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,26 +338,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.87073974 1.30910845 0.53412452 3.75962384 0.87801683]\n",
-      "[1.27073338 0.19987595 0.0751938  2.75920911 0.04370743]\n"
+      "Mean= [1.20471213 1.92770362 4.98274181 6.04110518 0.4849907 ]\n",
+      "Standard Diviation= [0.25831206 0.65933548 3.86776339 1.33298645 0.23762452]\n"
      ]
     }
    ],
    "source": [
-    "print(means)\n",
-    "print(sd)"
+    "print('Mean= '+str(means))\n",
+    "print('Standard Diviation= '+str(sd))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,15 +366,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.00000000e+00 -6.10622664e-16 -3.88578059e-16  1.11022302e-16\n",
-      "  0.00000000e+00]\n",
+      "[-4.44089210e-16  0.00000000e+00 -1.66533454e-16 -3.88578059e-16\n",
+      "  1.11022302e-16]\n",
       "[1. 1. 1. 1. 1.]\n"
      ]
     }
@@ -394,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +450,7 @@
        "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +473,7 @@
        "       9.43953692e+08, 3.73692871e+09, 3.10225064e+08, 3.10073456e+09])"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
